2002-07-05  Derek Atkins  <derek@ihtf.com>

	* gw-engine-spec.scm: wrap gnc_lot_get_split_list
	* gw-business-core-spec.scm: wrap gncInvoiceGetPosted{Acc,Txn,Lot}

	* invoice.scm: add the ability to show the payments applied to
	  the invoice
	
2002-07-04  Derek Atkins  <derek@ihtfp.com>

	* option-util.c: add gnc_option_get_option_data() function
	* dialog-options: publish gnc_options_dialog_changed_internal() so
	  pluggible options can set the flag, too.

	* business-options: (new files) implement owner/customer/vendor
	  options to plug into the options dialog.
	* businessmod-gnome: initialize business options
	* business-utils: pack into box FALSE, not TRUE
	* owner-report: put the company into the options dialog instead of
	  hiding it.

	* business-core.scm: fix a typo
	* business-options.c: implement invoice option for the dialog
	* gncEntryLedgerLoad.c: fix a compiler warning
	* invoice.scm: make report visible; deal with no invoice; make
	  invoice a visible option on the general page; deal with "printing"
	  un-posted invoices.
	* receivables.scm: remove code I don't need
	
2002-07-03  Derek Atkins  <derek@ihtfp.com>

	* moved receivable and payable aging reports to business-reports;
	added "links" to the company, invoices, and company-report.
	Create a "Business Reports" menu item under "Reports" and put the
	business reports there.  This required a new startup hook to allow
	dynamic creation of the Report Menu.  Change the aging reports to
	use Invoices and Lots instead of the transaction description to
	differentiate actual companies.

	* dialog-invoice: publish the function to open a company-report

	* business-urls: hooks into gnc-html for business objects.
	Initialize at module load-time.  wrap the business url types.

	* business-core: create gnc:owner-from-split which is used by a
	bunch of the business reports.  wrap gncOwnerCopy().

	* fix the "Create Test Data" extension
	
2002-07-03  Christian Stimming  <stimming@tuhh.de>
